samples/_failures_safe/1761798493_1cda32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1aec30f5.c: In function ‘main’:
./samples/SAFE/__tmp_1aec30f5.c:148:36: error: ‘num’ undeclared (first use in this function)
  148 |         if (choice < 1 || choice > num
      |                                    ^~~
./samples/SAFE/__tmp_1aec30f5.c:148:36: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1aec30f5.c:148:39: error: expected ‘)’ at end of input
  148 |         if (choice < 1 || choice > num
      |            ~                          ^
      |                                       )
./samples/SAFE/__tmp_1aec30f5.c:148:9: error: expected declaration or statement at end of input
  148 |         if (choice < 1 || choice > num
      |         ^~
./samples/SAFE/__tmp_1aec30f5.c:148:9: error: expected declaration or statement at end of input
